
Event System
* Initiation
** Fixed: Units available on loading or after a /reloadui were not being sent to the messege queue.
* Marks
** New: Now tracks changes in Marked targets. Also attempts to track mark changes in unavailable Units via damage and heal events.
* Casting
** New: Event for when a castbar becomes visible.
** New: Event for when a castbar is hidden.

Trigger System
* New: Personal Cast triggers are now available to boss mods. These will only trigger if the players target or focus is the current unit casting.
* New: Personal Interrupt triggers are now available to boss mods. These will only trigger if the players target or focus is the current unit interrupted.

Infernal Dawn
* Change: Re-ordered Bosses in the menu to better reflect current state of Raid.
* Warboss Drak
** New: Added Alert for Burning Will purges.
** New: Added Personal Cast alert and Timer for Death Blow. Requires the target to be focused or targeted by the player.
** New: Added Personal Interrupt Trigger for Death Blow alerts. Requires the target to be focused or targeted by the player.
** New: Added Unit tracking for Warforged Thrall. (see below)
** New: Added Personal Alert for Burning Sacrifice.
** New: Added global timer for Burning Sacrifice.
** New: Added Mechanic Spy object for Burning Sacrifice.
** New: Added a 12.5 minute enrage timer.
** Change: Trigger for Wanton Sacrifice changed from Blazing Thrall to Warforged Thrall.
* The Ember Conclave
** New: Each boss now has an adjustable castbar. (This will mean you'll need to set these up once)
** Fixed: The encounter will now only credit completion when all three bosses are dead, not just Szath.
** Fixed: Error on Encounter start for Nahoth.
** Fixed: Ereetu was forgetting where he is and triggering this encounter in FoLH.
* Gorlach
** New: Added personal alert for Hot Foot.
** New: Added Mechanic Spy for Hot Foot.
** New: Added Tank-Swap for Fire Infusion.
* Ituziel